added some strong

--- a/Index.html
+++ b/Index.html
@@ -66,10 +66,11 @@
             <footer class="footerLogo">
                 <img src="images/farhat-altaf-aVAHRUP7keU-unsplash-2.jpg" alt="Git Logo">
                 <img src="images/rubaitul-azad-HLQDfaJUTVI-unsplash.jpg" alt="GitHub Logo">
-                <p>Created by Abdul Kulindwa (Dully)</p>
+                <p>Created by <strong>Abdul Kulindwa (Dully)</strong></p>
 
 
     </div>
     
 </body>
+
 </html>
