--- a/Index.html
+++ b/Index.html
@@ -64,8 +64,8 @@
             </dl>
 
             <footer class="footerLogo">
-                <img src="images/farhat-altaf-aVAHRUP7keU-unsplash-2.jpg" alt="Git Logo">
-                <img src="images/rubaitul-azad-HLQDfaJUTVI-unsplash.jpg" alt="GitHub Logo">
+                <img src="images/farhat-altaf-aVAHRUP7keU-unsplash-2.jpg" alt="Git Logo" id="GitLogo" class="logo">
+                <img src="images/rubaitul-azad-HLQDfaJUTVI-unsplash.jpg" alt="GitHub Logo" id="GitHubLogo" class="logo">
                 <p>Created by <strong>Abdul Kulindwa (Dully)</strong></p>
 
 
