--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Git, GitHub ">
     <meta name="author" content="Abdul Kulindwa(Dully)">
     <title>Git Commands Glossary</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
                 <img src="images/farhat-altaf-aVAHRUP7keU-unsplash-2.jpg" alt="Git Logo" id="GitLogo" class="logo">
                 <img src="images/rubaitul-azad-HLQDfaJUTVI-unsplash.jpg" alt="GitHub Logo" id="GitHubLogo" class="logo">
                 <p>Created by <strong>Abdul Kulindwa (Dully)</strong></p>
-                
+
             </footer>
 
 
