--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Abdul Kulindwa(Dully)">
     <title>Git Commands Glossary</title>
     <base href="https://abdulkulindwa.github.io/gitCommandsGlossary/">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -64,9 +64,9 @@
 
             </dl>
 
-            <footer class="footerLogo">
-                <img src="images/farhat-altaf-aVAHRUP7keU-unsplash-2.jpg" alt="Git Logo" id="GitLogo" class="logo">
-                <img src="images/rubaitul-azad-HLQDfaJUTVI-unsplash.jpg" alt="GitHub Logo" id="GitHubLogo" class="logo">
+            <footer class="footerlogo">
+                <img src="./images/farhat-altaf-aVAHRUP7keU-unsplash-2.jpg" alt="Git Logo" id="GitLogo" class="logo">
+                <img src="./images/rubaitul-azad-HLQDfaJUTVI-unsplash.jpg" alt="GitHub Logo" id="GitHubLogo" class="logo">
                 <p>Created by <strong>Abdul Kulindwa (Dully)</strong></p>
 
             </footer>
